# ai-investment-dashboard

./: .env.example  .gitignore  Dockerfile.railway  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0c1a0521e4d5_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: cache.py  config.py  deps.py  rate_limit.py  security.py
backend/app/db/: base_model.py  session.py
backend/app/models/: __init__.py  alert.py  chat_message.py  earnings.py  holding.py  macro.py  option_position.py  options_flow.py  portfolio.py  refresh_token.py  risk_calculation.py  stock_analysis.py  transaction.py  user.py  watchlist.py
backend/app/schemas/: alert.py  analysis.py  auth.py  option_position.py  portfolio.py  watchlist.py
backend/app/services/: alert_service.py  analysis_service.py  auth_service.py  chat_service.py  earnings_analysis_service.py  earnings_market_service.py  earnings_service.py  insights_service.py  macro_overview_service.py  macro_service.py  market_data_service.py  market_service.py  news_intelligence_service.py  option_service.py  options_analysis_service.py  options_chain_service.py  options_service.py  options_strategy_service.py  performance_service.py  portfolio_advisor_service.py  portfolio_service.py  risk_service.py  stress_test_service.py  technical_service.py  watchlist_signals_service.py
backend/scripts/: check_db.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_portfolios.py
(+103 files in other folders)
