[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0,<5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "redis[hiredis]>=5.0.0",
    "yfinance>=0.2.30",
    "openai>=1.6.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "ta>=0.11.0",
    "scipy>=1.11.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]
